--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>WORK IN PROGESS</h1>
-    <script src="script.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
     
 </body>
 </html>
