--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies and Series</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
 </head>
+
 <body>
 
     <h1>WORK IN PROGESS</h1>
-    <script type="module" src="./scripts/main.js"></script>
     
+    <script type="module" src="./scripts/main.js"></script>
+
 </body>
+
 </html>
