Made the strucutre for the header

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -5,15 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies and Series</title>
+    <title>My Shows List</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
 </head>
 
 <body>
 
-    <h1>WORK IN PROGESS</h1>
-    
+    <header>
+        
+        <div class="logo">
+            <img src="" alt="Logo">
+            <h1>My Shows List</h1>
+        </div>
+
+        <div class="search">
+            <input type="text" name="" id="">
+            <i></i>
+        </div>
+
+        <div class="user">
+            <i></i>
+            <a>Login/Register</a>
+        </div>
+
+    </header>
+
     <script type="module" src="./scripts/main.js"></script>
 
 </body>
