--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -8,6 +8,7 @@
     <title>My Shows List</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
+    <script src="https://kit.fontawesome.com/1dbb3ca32c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
