--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -22,11 +22,11 @@
 
         <div class="search">
             <input type="text" name="" id="">
-            <i></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
         </div>
 
         <div class="user">
-            <i></i>
+            <i class="fa-solid fa-circle-user"></i>
             <a>Login/Register</a>
         </div>
 
