--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Shows List</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.ico">
     <script src="https://kit.fontawesome.com/1dbb3ca32c.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,7 +16,7 @@
     <header>
         
         <div class="logo">
-            <img src="" alt="Logo">
+            <img src="./images/logo.png" alt="Logo">
             <h1>My Shows List</h1>
         </div>
 
