Search on the header done

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -8,9 +8,9 @@
     <title>My Shows List</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1dbb3ca32c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.ico">
-    <script src="https://kit.fontawesome.com/1dbb3ca32c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
         <div class="search">
             <input type="text" name="" id="">
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-magnifying-glass icon"></i>
         </div>
 
         <div class="user">
