--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -18,7 +18,7 @@
     <header>
         
         <div class="logo">
-            <img src="./images/logo.png" alt="Logo" class="logo-image">
+            <img src="./images/logo.png" draggable="false" alt="Logo" class="logo-image">
             <h1>My Shows List</h1>
         </div>
 
