--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -34,6 +34,30 @@
 
     </header>
 
+    <div id="body" class="body">
+
+        <div class="register-body">
+            <h1 class="register-title">Register</h1>
+            <div>
+                <i class="fa-solid fa-user"> Username</i>
+                <input type="text">
+            </div>
+            <div>
+                <i class="fa-solid fa-key"> Password</i>
+                <input type="text">
+            </div>
+            <div>
+                <i class="fa-solid fa-envelope"> E-mail</i>
+                <input type="text">
+            </div>
+
+            <a href="">Forgot password?</a>
+            <p>Already registered? <a href="">Login</a></p>
+            <button class="register-button">Register</button>      
+        </div>
+
+    </div>
+
     <script type="module" src="./scripts/main.js"></script>
 
 </body>
