--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -35,7 +35,20 @@
     </header>
 
     <div id="body" class="body">
-
+        <div class="login-body">
+            <h1 class="login-title">Login</h1>
+            <div>
+                <i class="fa-solid fa-user"> Username or E-mail</i>
+                <input type="text">
+            </div>
+            <div>
+                <i class="fa-solid fa-key"> Password</i>
+                <input type="password">
+            </div>
+            <a href="">Forgot password?</a>
+            <p>No account? <a href="">Register</a></p>
+            <button class="login-button">Login</button>
+        </div>
     </div>
 
     <script type="module" src="./scripts/main.js"></script>
