--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -35,7 +35,18 @@
     </header>
 
     <div id="body" class="body">
-        
+        <div id="forgot-password-body">
+            <h1>Password Recovery</h1>
+            <div>
+                <i class="fa-solid fa-user"> E-mail or username</i>
+                <input type="text">
+            </div>
+            <div>
+                <i>Secret Question</i>
+                <input type="text">
+            </div>
+            <button>Submit</button>
+        </div>
     </div>
 
     <script type="module" src="./scripts/main.js"></script>
