Made the styles for the password recovery page

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -35,8 +35,8 @@
     </header>
 
     <div id="body" class="body">
-        <div id="forgot-password-body">
-            <h1>Password Recovery</h1>
+        <div class="forgot-password-body">
+            <h1 class="recovery-title">Password Recovery</h1>
             <div>
                 <i class="fa-solid fa-user"> E-mail or username</i>
                 <input type="text">
@@ -45,7 +45,7 @@
                 <i>Secret Question</i>
                 <input type="text">
             </div>
-            <button>Submit</button>
+            <button class="recovery-button">Submit</button>
         </div>
     </div>
 
