Created new file for buttons related styles

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -45,7 +45,7 @@
                 <i>Secret Question</i>
                 <input type="text">
             </div>
-            <button class="recovery-button">Submit</button>
+            <button class="blue-purple-btn">Submit</button>
         </div>
     </div>
 
