--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
@@ -10,5 +10,5 @@
     </div>
     <a href="">Forgot password?</a>
     <p>No account? <a href="">Register</a></p>
-    <button class="login-button">Login</button>
+    <button class="blue-purple-btn">Login</button>
 </div>
