Created a file for the recovery page structure

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
@@ -14,5 +14,5 @@
     </div>
 
     <p>Already registered? <a href="">Login</a></p>
-    <button class="blue-purple-btn">Register</button>
+    <button class="blue-purple-btn" id="submit-register">Register</button>
 </div>
