--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
@@ -8,7 +8,7 @@
         <i class="fa-solid fa-key"> Password</i>
         <input type="password">
     </div>
-    <a href="">Forgot password?</a>
-    <p>No account? <a href="">Register</a></p>
+    <a href="/#recovery">Forgot password?</a>
+    <p>No account? <a href="/#register">Register</a></p>
     <button class="blue-purple-btn" id="submit-login">Login</button>
 </div>
