Started implementing login and fixed bugs on the error

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
@@ -2,11 +2,11 @@
     <h1 class="login-title">Login</h1>
     <div>
         <i class="fa-solid fa-user"> Username or E-mail</i>
-        <input type="text">
+        <input id="login-un" type="text">
     </div>
     <div>
         <i class="fa-solid fa-key"> Password</i>
-        <input type="password">
+        <input id="login-pw" type="password">
     </div>
     <a href="/#recovery">Forgot password?</a>
     <p>No account? <a href="/#register">Register</a></p>
