User can now login

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -29,7 +29,7 @@
 
         <div class="user">
             <i class="fa-solid fa-circle-user"></i>
-            <a>Login/Register</a>
+            <a id="auth-btn">Login/Register</a>
         </div>
 
     </header>
