--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/login.html
@@ -10,5 +10,6 @@
     </div>
     <a href="/#recovery">Forgot password?</a>
     <p>No account? <a href="/#register">Register</a></p>
+    <p>Keep logged in? <input type="checkbox" id="save-user"></p>
     <button class="blue-purple-btn" id="submit-login">Login</button>
 </div>
