Added all the current pages to the router

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
@@ -13,6 +13,6 @@
         <input type="text">
     </div>
 
-    <p>Already registered? <a href="">Login</a></p>
+    <p>Already registered? <a href="/#login">Login</a></p>
     <button class="blue-purple-btn" id="submit-register">Register</button>
 </div>
