Made some changes to the register and recovery page

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
@@ -2,15 +2,15 @@
     <h1 class="register-title">Register</h1>
     <div>
         <i class="fa-solid fa-user"> Username</i>
-        <input type="text">
+        <input id="register-un" type="text">
     </div>
     <div>
         <i class="fa-solid fa-key"> Password</i>
-        <input type="text">
+        <input id="register-pw" type="text">
     </div>
     <div>
         <i class="fa-solid fa-envelope"> E-mail</i>
-        <input type="text">
+        <input id="register-email" type="text">
     </div>
 
     <p>Already registered? <a href="/#login">Login</a></p>
