--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/recovery.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/recovery.html
@@ -1,12 +1,12 @@
 <div class="forgot-password-body">
     <h1 class="recovery-title">Password Recovery</h1>
     <div>
-        <i class="fa-solid fa-user"> E-mail or username</i>
-        <input type="text">
+        <i class="fa-solid fa-user"> Username</i>
+        <input id="recovery-user" type="text">
     </div>
     <div>
-        <i>Secret Question</i>
-        <input type="text">
+        <i class="fa-solid fa-envelope"> E-mail</i>
+        <input id="recovery-email" type="text">
     </div>
     <button class="blue-purple-btn" id="submit-recovery">Submit</button>
 </div>
