Changed input types on register

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/register.html
@@ -6,11 +6,11 @@
     </div>
     <div>
         <i class="fa-solid fa-key"> Password</i>
-        <input id="register-pw" type="text">
+        <input id="register-pw" type="password">
     </div>
     <div>
         <i class="fa-solid fa-envelope"> E-mail</i>
-        <input id="register-email" type="text">
+        <input id="register-email" type="email">
     </div>
 
     <p>Already registered? <a href="/#login">Login</a></p>
