--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/404.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/404.html
@@ -1,5 +1,5 @@
-<div class="center">
+<div class="not-found">
     <h1>404: NOT FOUND</h1>
-    <h3>Seems like you're lost, go back?</h3>
+    <h3>Seems like you're lost, wanna go back?</h3>
     <button class="blue-purple-btn" id="go-black">Go Back!</button>
 </div>
