Skeleton for the users profile page

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -35,7 +35,21 @@
     </header>
 
     <div id="body" class="body">
+        <div class="profile-header">
+            <div class="background">
+                <img src="./images/default-banner.png" alt="banner">
+            </div>
+            <div class="profile-picutre">
+                <img src="./images/default-user-image.png" alt="profile pic">
+            </div>
+            <div class="user-info">
+                <h1>Lorem</h1>
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste a officiis ipsum nesciunt explicabo rem?</h2>
+            </div>
+        </div>
+        <div class="profile-body">
         
+        </div>
     </div>
 
     <script type="module" src="./scripts/main.js"></script>
