Made the basic styles for the user profile header

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -39,7 +39,7 @@
             <div class="background">
                 <img src="./images/default-banner.png" alt="banner">
             </div>
-            <div class="profile-picutre">
+            <div class="profile-picture">
                 <img src="./images/default-user-image.png" alt="profile pic">
             </div>
             <div class="user-info">
