Made a basic structure for the profile body

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <div id="body" class="body">
-        <div class="profile-header">
+        <!--<div class="profile-header">
             <div class="background">
                 <img src="./images/default-banner.png" alt="banner">
             </div>
@@ -46,9 +46,25 @@
                 <h1>Lorem</h1>
                 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste a officiis ipsum nesciunt explicabo rem?</h2>
             </div>
-        </div>
+        </div>-->
         <div class="profile-body">
-        
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
         </div>
     </div>
 
