Added some nice animations to the cards

--- a/SERVER/Routers/WEB-PAGE/index.html
+++ b/SERVER/Routers/WEB-PAGE/index.html
@@ -48,7 +48,12 @@
             </div>
         </div>
         <div class="profile-body">
-            <div class="card"></div>
+            <div class="card">
+                <img src="https://picsum.photos/500?random=1" alt="">
+                <div class="card-title">
+                    Lorem ipsum dolor sit.
+                </div>
+            </div>
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
