Now when a user enters his own profile it creates 3 buttons

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile.html
@@ -1,4 +1,4 @@
-<div class="profile-header">
+<div class="profile-header" id="profile-header">
     <div class="background">
         <img src="./images/default-banner.png" alt="banner">
     </div>
