Started implementing the script for the profile body

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile.html
@@ -10,8 +10,8 @@
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste a officiis ipsum nesciunt explicabo rem?</h2>
     </div>
 </div>
-<div class="profile-body">
-    <div class="card">
+<div class="profile-body" id="profile-body">
+    <!--<div class="card">
         <img src="https://picsum.photos/500?random=1" alt="">
         <div class="card-title">
             Lorem ipsum dolor sit.
@@ -25,5 +25,5 @@
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
-    <div class="card"></div>
+    <div class="card"></div>-->
 </div>
