Minor changes on the profile-editor skeleton

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
@@ -1,7 +1,8 @@
-<h1>WORK IN PROGRESS</h1>
-<input type="file" name="banner-input" id="banner-input">
-<input type="file" name="profile-pic-input" id="profile-pic-input">
-<button>Change Profile Picture</button>
-<button>Change Banner</button>
-<p>Description:</p>
-<textarea name="" id="" cols="30" rows="10">Old description will be here</textarea>
+<div class="profile-editor-body">
+    <input type="file" name="banner-input" id="banner-input">
+    <input type="file" name="profile-pic-input" id="profile-pic-input">
+    <button>Change Profile Picture</button>
+    <button>Change Banner</button>
+    <p>Description:</p>
+    <textarea name="" id="" cols="30" rows="10">Old description will be here</textarea>
+</div>
