Added button to submit changes

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
@@ -1,12 +1,18 @@
 <div class="profile-editor-body">
     <input type="file" name="banner-input" id="banner-input">
     <input type="file" name="profile-pic-input" id="profile-pic-input">
+
     <p>Banner Preview</p>
-    <button id="banner-btn">Change Banner</button>
+    <button class="blue-purple-btn" id="banner-btn">Change Banner</button>
     <img src="" alt="banner-preview">
+
     <p>Profile Picture Preview</p>
-    <button id="profile-pic-btn">Change Profile Picture</button>
+    <button class="blue-purple-btn" id="profile-pic-btn">Change Profile Picture</button>
     <img src="" alt="profile-pic-preview">
+
     <p>Description:</p>
     <textarea name="" id="" cols="30" rows="10">Old description will be here</textarea>
+
+    <button class="blue-purple-btn" id="submit-profile-edit">Submit</button>
+
 </div>
