Started working on the profile editor styles

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
@@ -1,14 +1,15 @@
 <div class="profile-editor-body">
+    <h1>Edit Profile</h1>
     <input type="file" name="banner-input" id="banner-input">
     <input type="file" name="profile-pic-input" id="profile-pic-input">
 
-    <p>Banner Preview</p>
     <button class="blue-purple-btn" id="banner-btn">Change Banner</button>
-    <img src="" alt="banner-preview">
+    <p>Banner Preview</p>
+    <img src="" class="banner-edit" alt="banner-preview">
 
-    <p>Profile Picture Preview</p>
     <button class="blue-purple-btn" id="profile-pic-btn">Change Profile Picture</button>
-    <img src="" alt="profile-pic-preview">
+    <p>Profile Picture Preview</p>
+    <img src="" class="profile-picture-edit" alt="profile-pic-preview">
 
     <p>Description:</p>
     <textarea name="" id="" cols="30" rows="10">Old description will be here</textarea>
