User can now upload a file to the browser but it only shows a preview

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/profile-editor.html
@@ -5,11 +5,11 @@
 
     <button class="blue-purple-btn" id="banner-btn">Change Banner</button>
     <p>Banner Preview</p>
-    <img src="" class="banner-edit" alt="banner-preview">
+    <img src="" id="banner-edit" class="banner-edit" alt="banner-preview">
 
     <button class="blue-purple-btn" id="profile-pic-btn">Change Profile Picture</button>
     <p>Profile Picture Preview</p>
-    <img src="" class="profile-picture-edit" alt="profile-pic-preview">
+    <img src="" id="profile-picture-edit" class="profile-picture-edit" alt="profile-pic-preview">
 
     <p>Description:</p>
     <textarea name="" id="" cols="30" rows="6">Old description will be here</textarea>
