Made a first skeleton for the show creator page

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -1,1 +1,21 @@
 <h1>WORK IN PROGRESS</h1>
+<div class="show-creater-body">
+    <div class="show-inputs">
+        <p>Title</p>
+        <input type="text">
+        <p>Description</p>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <p>Rate</p>
+        <input type="number" name="" id="">
+        <p>Image</p>
+        <button class="blue-purple-btn">Upload</button>
+        <input type="file" name="" id="">
+    </div>
+    <div class="show-preview">
+        <h1>Title</h1>
+        <h2>Description</h2>
+        <p>0/10</p>
+        <img src="" alt="Image">
+    </div>
+    <button class="blue-purple-btn">Submit</button>
+</div>
