--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -2,20 +2,20 @@
 <div class="show-creater-body">
     <div class="show-inputs">
         <p>Title</p>
-        <input type="text">
+        <input type="text" id="show-creator-title-input">
         <p>Description</p>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <textarea name="" id="show-creator-description-input" cols="30" rows="10"></textarea>
         <p>Rate</p>
-        <input type="number" name="" id="">
+        <input type="number" name="" id="show-creator-rate-input">
         <p>Image</p>
         <button class="blue-purple-btn">Upload</button>
-        <input type="file" name="" id="">
+        <input type="file" name="" id="show-creator-image-input">
     </div>
     <div class="show-preview">
-        <h1>Title</h1>
-        <h2>Description</h2>
-        <p>0/10</p>
-        <img src="" alt="Image">
+        <h1 id="show-creator-title">Title</h1>
+        <h2 id="show-creator-description">Description</h2>
+        <p id="show-creator-rate">0/10</p>
+        <img src="" alt="Image" id="show-creator-image">
     </div>
     <button class="blue-purple-btn">Submit</button>
 </div>
