--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -1,4 +1,3 @@
-<h1>WORK IN PROGRESS</h1>
 <div class="show-creater-body">
     <div class="show-inputs">
         <p>Title</p>
@@ -17,5 +16,6 @@
         <p id="show-creator-rate">0/10</p>
         <img src="" alt="Image" id="show-creator-image">
     </div>
-    <button class="blue-purple-btn">Submit</button>
 </div>
+<br>
+<button class="blue-purple-btn show-creator-submit">Submit</button>
