Made some tryouts for in time update of the preview

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -5,9 +5,9 @@
         <p>Description</p>
         <textarea name="" id="show-creator-description-input" cols="30" rows="10"></textarea>
         <p>Rate</p>
-        <input type="number" name="" id="show-creator-rate-input">
+        <input type="number" min="0" max="10" name="" id="show-creator-rate-input">
         <p>Image</p>
-        <button class="blue-purple-btn">Upload</button>
+        <button id="show-upload-btn" class="blue-purple-btn">Upload</button>
         <input type="file" name="" id="show-creator-image-input">
     </div>
     <div class="show-preview">
