Implemented a skeleton in html for the swap panel

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -1,4 +1,8 @@
 <div class="show-creater-body">
+    <div class="show-creator-swap-panel">
+        <a href="" id="go-to-editor" class="go-to-editor">Editor</a>
+        <a href="" id="go-to-preview" class="go-to-preview">Preview</a>
+    </div>
     <div class="show-inputs">
         <p>Title</p>
         <input type="text" id="show-creator-title-input">
