--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -1,10 +1,10 @@
 <div class="show-creator-swap-panel">
-    <a id="go-to-editor" class="go-to-editor">Editor</a>
-    <a id="go-to-preview" class="go-to-preview selected">Preview</a>
+    <a id="go-to-editor" class="go-to-editor selected">Editor</a>
+    <a id="go-to-preview" class="go-to-preview">Preview</a>
 </div>
 
 <div class="show-creater-body">
-    <div class="show-inputs">
+    <div id="show-inputs" class="show-inputs">
         <p>Title</p>
         <input type="text" id="show-creator-title-input">
         <p>Description</p>
@@ -15,7 +15,7 @@
         <button id="show-upload-btn" class="blue-purple-btn">Upload</button>
         <input type="file" name="" id="show-creator-image-input">
     </div>
-    <div class="show-preview">
+    <div id="show-preview" class="show-preview">
         <h1 id="show-creator-title">Title</h1>
         <h2 id="show-creator-description">Description</h2>
         <p id="show-creator-rate">0/10</p>
