Removed code form the media query and added it to the main class to make it a bit more responsive

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -19,7 +19,7 @@
         <h1 id="show-creator-title">Title</h1>
         <h2 id="show-creator-description">Description</h2>
         <p id="show-creator-rate">0/10</p>
-        <img src="" alt="Image" id="show-creator-image">
+        <img id="show-creator-image">
     </div>
 </div>
 <br>
