Fixed some mistakes with the styles

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -10,14 +10,14 @@
         <p>Description</p>
         <textarea name="" id="show-creator-description-input" cols="30" rows="10"></textarea>
         <p>Rate</p>
-        <input type="number" min="0" max="10" name="" id="show-creator-rate-input">
+        <input type="number" min="0" max="10" class="rate-input" id="show-creator-rate-input">
         <p>Image</p>
         <button id="show-upload-btn" class="blue-purple-btn">Upload</button>
         <input type="file" name="" id="show-creator-image-input">
     </div>
     <div id="show-preview" class="show-preview">
         <h1 id="show-creator-title">Title</h1>
-        <h2 id="show-creator-description">Description</h2>
+        <h2 id="show-creator-description" class="desc-preview">Description</h2>
         <p id="show-creator-rate">0/10</p>
         <img id="show-creator-image">
     </div>
