Fixed some annoying bugs with the styles

--- a/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/SERVER/Routers/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -8,7 +8,7 @@
         <p>Title</p>
         <input type="text" id="show-creator-title-input">
         <p>Description</p>
-        <textarea name="" id="show-creator-description-input" cols="30" rows="10"></textarea>
+        <textarea name="" id="show-creator-description-input" class="desc-input" cols="30" rows="10"></textarea>
         <p>Rate</p>
         <input type="number" min="0" max="10" class="rate-input" id="show-creator-rate-input">
         <p>Image</p>
