--- a/WEB-PAGE/index.html
+++ b/WEB-PAGE/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Shows List</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1dbb3ca32c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon.ico">
