Made a new skeleton for the 404 page

--- a/WEB-PAGE/scripts/pages/structures/404.html
+++ b/WEB-PAGE/scripts/pages/structures/404.html
@@ -1,5 +1,4 @@
 <div class="not-found">
-    <h1>404: NOT FOUND</h1>
-    <h3>Seems like you're lost, wanna go back?</h3>
-    <button class="blue-purple-btn" id="go-back">Go Back!</button>
+    <h1>404</h1>
+    <h2>NOT FOUND</h2>
 </div>
