Made a first implementation for the show creator in the front end

--- a/WEB-PAGE/scripts/pages/structures/show-creator.html
+++ b/WEB-PAGE/scripts/pages/structures/show-creator.html
@@ -23,5 +23,5 @@
     </div>
 </div>
 <br>
-<button class="blue-purple-btn show-creator-submit">Submit</button>
+<button class="blue-purple-btn show-creator-submit" id="create-show">Submit</button>
 <br>
