--- a/WEB-PAGE/scripts/pages/structures/profile.html
+++ b/WEB-PAGE/scripts/pages/structures/profile.html
@@ -1,13 +1,13 @@
 <div class="profile-header" id="profile-header">
     <div class="background">
-        <img src="./images/default-banner.png" alt="banner">
+        <img src="./images/default-banner.png"  id="profile-banner" alt="banner">
     </div>
     <div class="profile-picture">
-        <img src="./images/default-user-image.png" alt="profile pic">
+        <img src="./images/default-user-image.png" id="profile-picture" alt="profile pic">
     </div>
     <div class="user-info">
-        <h1>Lorem</h1>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste a officiis ipsum nesciunt explicabo rem?</h2>
+        <h1 id="username">Lorem</h1>
+        <h2 id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste a officiis ipsum nesciunt explicabo rem?</h2>
     </div>
 </div>
 <div class="profile-body" id="profile-body">
