Moved the html skeleton for the dropdown list to the correct place

--- a/WEB-PAGE/scripts/pages/structures/profile.html
+++ b/WEB-PAGE/scripts/pages/structures/profile.html
@@ -9,6 +9,16 @@
         <h1 id="username"></h1>
         <h2 id="description"></h2>
     </div>
+    <br>
+    <div class="dropdown">
+        <button class="dropbtn">Sort By</button>
+        <div class="dropdown-content">
+            <a href="">Title</a>
+            <a href="">Older First</a>
+            <a href="">Newer First</a>
+            <a href="">Rate</a>
+        </div>
+    </div>
 </div>
 <div class="profile-body" id="profile-body">
     
