Implemented a way to update the profile on the front end

--- a/WEB-PAGE/scripts/pages/structures/profile-editor.html
+++ b/WEB-PAGE/scripts/pages/structures/profile-editor.html
@@ -12,7 +12,7 @@
     <img src="" id="profile-picture-edit" class="profile-picture-edit" alt="profile-pic-preview">
 
     <p>Description:</p>
-    <textarea name="" id="" cols="30" rows="6">Old description will be here</textarea>
+    <textarea name="" cols="30" rows="6" id="description-input">Old description will be here</textarea>
 
     <button class="blue-purple-btn" id="submit-profile-edit">Submit</button>
 
