--- a/WEB-PAGE/scripts/pages/structures/profile-editor.html
+++ b/WEB-PAGE/scripts/pages/structures/profile-editor.html
@@ -5,14 +5,14 @@
 
     <button class="blue-purple-btn" id="banner-btn">Change Banner</button>
     <p>Banner Preview</p>
-    <img src="" id="banner-edit" class="banner-edit" alt="banner-preview">
+    <img src="" id="banner-edit" class="banner-edit">
 
     <button class="blue-purple-btn" id="profile-pic-btn">Change Profile Picture</button>
     <p>Profile Picture Preview</p>
-    <img src="" id="profile-picture-edit" class="profile-picture-edit" alt="profile-pic-preview">
+    <img src="" id="profile-picture-edit" class="profile-picture-edit">
 
     <p>Description:</p>
-    <textarea name="" cols="30" rows="6" id="description-input">Old description will be here</textarea>
+    <textarea name="" cols="30" rows="6" id="description-input"></textarea>
 
     <button class="blue-purple-btn" id="submit-profile-edit">Submit</button>
 
