The cards are now being correctly sorted but it's only working with the title

--- a/WEB-PAGE/scripts/pages/structures/profile.html
+++ b/WEB-PAGE/scripts/pages/structures/profile.html
@@ -13,10 +13,10 @@
     <div class="dropdown">
         <button class="dropbtn">Sort By</button>
         <div class="dropdown-content">
-            <a href="">Title</a>
-            <a href="">Older First</a>
-            <a href="">Newer First</a>
-            <a href="">Rate</a>
+            <a id="title">Title</a>
+            <a id="older">Older First</a>
+            <a id="newer">Newer First</a>
+            <a id="rate">Rate</a>
         </div>
     </div>
 </div>
